// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render when given all the props 1`] = `
<div
  className="a b c d e f"
>
  <div
    className="d g f h i j"
  >
    <div />
    <div
      className="k"
      role="tablist"
    >
      <a
        className="cf-link l m n o p q r s t u v w x y"
        href="#!"
        id="card-0-drawer-one"
        onClick={[Function]}
        role="tab"
      >
        One
      </a>
      <a
        className="cf-link l m n o p q r s t u v w x z"
        href="#!"
        id="card-0-drawer-two"
        onClick={[Function]}
        role="tab"
      >
        Two
      </a>
    </div>
  </div>
  <div>
    <div
      className="d ab"
      id={undefined}
      isActive={true}
      onClick={undefined}
    >
      One Content
    </div>
    <div
      className="ac ad"
      id={undefined}
      isActive={false}
      onClick={undefined}
    />
  </div>
</div>
`;

exports[`should render when given all the props 2`] = `
"
.a {
  display: table
}

.b {
  table-layout: fixed
}

.c {
  width: 100%
}

.d {
  border-top: 1px solid #dedede
}

.e {
  border-left: initial
}

.f:first-child {
  border-top: initial
}

.g {
  min-height: 2.96666rem
}

.h::after {
  content: ''
}

.i::after {
  display: table
}

.j::after {
  clear: both
}

.k {
  float: right
}

.l {
  position: relative
}

.m {
  display: inline-block
}

.n {
  padding: 0.73333rem 2em 0.73333rem 0.5rem
}

.o {
  line-height: 1.5
}

.p::after {
  content: '\\\\f003'
}

.q::after {
  font-family: \\"cloudflare-font\\"
}

.r::after {
  font-style: normal
}

.s::after {
  font-weight: normal
}

.t::after {
  margin-top: -0.7em
}

.u::after {
  position: absolute
}

.v::after {
  top: 51%
}

.w::after {
  right: 1rem
}

.x::after {
  transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -webkit-transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -moz-transition: transform 0.2s ease
}

.y::after {
  transform: rotate(90deg);
  -webkit-transform: rotate(90deg)
}

.z::after {
  transform: initial;
  -webkit-transform: initial
}

.ab {
  padding: 1.5rem
}

.ac {
  border-top: initial
}

.ad {
  padding: initial
}
"
`;

exports[`should render when not given props 1`] = `
<div
  className="a b c d e f"
>
  <div
    className="d g f h i j"
  >
    <div />
    <div
      className="k"
      role="tablist"
    >
      <a
        className="cf-link l m n o p q r s t u v w x y"
        href="#!"
        id="card-1-drawer-one"
        onClick={[Function]}
        role="tab"
      >
        One
      </a>
      <a
        className="cf-link l m n o p q r s t u v w x y"
        href="#!"
        id="card-1-drawer-two"
        onClick={[Function]}
        role="tab"
      >
        Two
      </a>
    </div>
  </div>
  <div>
    <div
      className="z ab"
      id={undefined}
      isActive={false}
      onClick={undefined}
    />
    <div
      className="z ab"
      id={undefined}
      isActive={false}
      onClick={undefined}
    />
  </div>
</div>
`;

exports[`should render when not given props 2`] = `
"
.a {
  display: table
}

.b {
  table-layout: fixed
}

.c {
  width: 100%
}

.d {
  border-top: 1px solid #dedede
}

.e {
  border-left: initial
}

.f:first-child {
  border-top: initial
}

.g {
  min-height: 2.96666rem
}

.h::after {
  content: ''
}

.i::after {
  display: table
}

.j::after {
  clear: both
}

.k {
  float: right
}

.l {
  position: relative
}

.m {
  display: inline-block
}

.n {
  padding: 0.73333rem 2em 0.73333rem 0.5rem
}

.o {
  line-height: 1.5
}

.p::after {
  content: '\\\\f003'
}

.q::after {
  font-family: \\"cloudflare-font\\"
}

.r::after {
  font-style: normal
}

.s::after {
  font-weight: normal
}

.t::after {
  margin-top: -0.7em
}

.u::after {
  position: absolute
}

.v::after {
  top: 51%
}

.w::after {
  right: 1rem
}

.x::after {
  transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -webkit-transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -moz-transition: transform 0.2s ease
}

.y::after {
  transform: initial;
  -webkit-transform: initial
}

.z {
  border-top: initial
}

.ab {
  padding: initial
}
"
`;
